--- a/MedicalServicesCentralisationSystem/nbproject/project.properties
+++ b/MedicalServicesCentralisationSystem/nbproject/project.properties
@@ -35,13 +35,15 @@ dist.jlink.output=${dist.jlink.dir}/MedicalServicesCentralisationSystem
 excludes=
 file.reference.AbsoluteLayout.jar=AbsoluteLayout.jar
 file.reference.db4o-8.0.184.15484-all-java5.jar=db4o-8.0.184.15484-all-java5.jar
+file.reference.jcalendar-1.2.2.jar=jcalendar-1.2.2.jar
 file.reference.twilio-8.9.0-jar-with-dependencies.jar=C:\\Users\\prans\\Downloads\\twilio-8.9.0-jar-with-dependencies.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.db4o-8.0.184.15484-all-java5.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.twilio-8.9.0-jar-with-dependencies.jar}
+    ${file.reference.twilio-8.9.0-jar-with-dependencies.jar}:\
+    ${file.reference.jcalendar-1.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
